# TradeLoop

./: .env.example  .gitignore  Dockerfile  OUTREACH.md  PITCH.md  README.md  STRATEGY.md  alembic.ini  docker-compose.yml  pyproject.toml  railway.toml  render.yaml  requirements.txt  sample_trades.csv
.github/workflows/: ci.yml
app/: __init__.py  config.py  crypto.py  db.py  dependencies.py  logging_config.py  main.py  rate_limit.py  security.py
app/api/: admin.py  analytics.py  auth.py  broker_connect.py  insights.py  market_data.py  payments.py  prop_accounts.py  reports.py  rules.py  trades.py
app/engine/: analytics.py  auto_tagger.py  behavioral.py  broker_sync.py  counterfactual.py  csv_parser.py  intelligence.py  prop_rules.py  rule_checker.py  synthetic.py  weekly_report.py
app/models/: __init__.py  audit_log.py  broker_connection.py  prop_account.py  rule_violation.py  trade.py  trading_rule.py  user.py
app/schemas/: auth.py  trade.py
app/services/: __init__.py  analytics_service.py  analytics_tracking.py  audit_service.py  background.py  broker_service.py  compliance_service.py  email_service.py  event_bus.py  market_data.py  trade_service.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vercel.json  vitest.config.ts
frontend/public/: robots.txt  sitemap.xml
frontend/src/: App.tsx  main.tsx  types.ts
migrations/: env.py
migrations/versions/: 001_initial_schema.py  002_add_behavioral_fields.py  (+2 more)
scripts/: ci-local.sh
tests/: conftest.py  test_analytics.py  test_api.py  test_behavioral.py  test_csv_parser.py
(+40 files in other folders)
